--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
             element.classList.add("marked");
             var xhttp = new XMLHttpRequest();
             xhttp.open("POST", "/Entry", true);
-            xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+            xhttp.setRequestHeader("Content-type", "text/plain");
             xhttp.send("id="+elmid);
         } else {
             alert("Element " + elmid + " wird schon bearbeiter");
