--- a/Callcenter/Views/Alle/Index.cshtml
+++ b/Callcenter/Views/Alle/Index.cshtml
@@ -12,8 +12,8 @@
                 <th>Timestamp</th>
                 <th>phone</th>
                 <th>zip</th>
-                <th>requestText</th>
-                <th>Mark</th>
+                <th>Text</th>
+                <th>Markieren</th>
                 <th>Finish</th>
             </tr>
             @foreach(var item in Model)
