--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -50,8 +50,8 @@
                 <td>@item.timestamp</td>
                 <td>@item.phone</td>
                 <td>@item.requestText</td>
-                <td onclick="MarkItem('@item.id')">O</td>
-                <td onclick="DelItem('@item.id')">X</td>
+                <td onclick="MarkItem('@item.id')"><i class="fas fa-user-edit"></i></td>
+                <td onclick="DelItem('@item.id')"><i class="fas fa-thumbs-up"></i></td>
             </tr>
         }
     </table>
