--- a/Callcenter/Views/Shared/_Layout.cshtml
+++ b/Callcenter/Views/Shared/_Layout.cshtml
@@ -6,8 +6,8 @@
     <title>@ViewData["Title"] - Callcenter</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <script src="~/lib/fontawesome/css/all.css"></script>
-    <script src="~/lib/fontawesome/js/all.js"></script>
+    <script src="~/lib/font-awesome/css/all.css"></script>
+    <script src="~/lib/font-awesome/js/all.js"></script>
 </head>
 <body>
     <header>
