--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -40,9 +40,9 @@
         <tr>
             <th>Timestamp</th>
             <th>phone</th>
-            <th>requestText</th>
-            <th>Mark</th>
-            <th>Finish</th>
+            <th>Text</th>
+            <th>Bearbeiten</th>
+            <th>Fertig</th>
         </tr>
         @foreach (var item in Model)
         {
