--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -15,13 +15,20 @@
     function MarkItem(elmid) {
         var element = document.getElementById(elmid);
         if (!element.classList.contains("other")) {
+            if (!element.classList.contains("other")) { }
             element.classList.add("marked");
             var xhttp = new XMLHttpRequest();
             xhttp.open("GET", "/Entry/Mark/" + elmid, true);
             xhttp.send();
         } else {
-            alert("Element " + elmid + " wird schon bearbeiter");
+            element.classList.remove("marked");
+            var xhttp = new XMLHttpRequest();
+            xhttp.open("GET", "/Entry/Free/" + elmid, true);
+            xhttp.send();
         }
+    } else {
+        alert("Element " + elmid + " wird schon bearbeiter");
+    }
     }
     function DelItem(elmid) {
         var element = document.getElementById(elmid);
@@ -70,6 +77,13 @@
         var element = document.getElementById(id);
         if (element && element != undefined && element != null && !element.classList.contains("marked")) {
             element.classList.add("other");
+        }
+    });
+    connection.on("free", function (id) {
+        console.log("SignalR - Free: " + id);
+        var element = document.getElementById(id);
+        if (element && element != undefined && element != null && !element.classList.contains("marked")) {
+            element.classList.remove("other");
         }
     });
     connection.on("delete", function (id) {
