--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -15,13 +15,25 @@
     function MarkItem(elmid) {
         var element = document.getElementById(elmid);
         if (!element.classList.contains("other")) {
-            if (!element.classList.contains("other")) {
+            if (!element.classList.contains("marked")) {
                 element.classList.add("marked");
+                element.childNodes.forEach(item => {
+                    if (item.classList.contains("fa-user-edit")) {
+                        item.classList.add("fa-times");
+                        item.classList.remove("fa-user-edit");
+                    }
+                });
                 var xhttp = new XMLHttpRequest();
                 xhttp.open("GET", "/Entry/Mark/" + elmid, true);
                 xhttp.send();
             } else {
                 element.classList.remove("marked");
+                element.childNodes.forEach(item => {
+                    if (item.classList.contains("fa-times")) {
+                        item.classList.add("fa-user-edit");
+                        item.classList.remove("fa-times");
+                    }
+                });
                 var xhttp = new XMLHttpRequest();
                 xhttp.open("GET", "/Entry/Free/" + elmid, true);
                 xhttp.send();
