--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
             if (!element.classList.contains("marked")) {
                 element.classList.add("marked");
                 element.childNodes.forEach(item => {
-                    if (item.classList.contains("fa-user-edit")) {
+                    if (item.classList != undefined && item.classList.contains("fa-user-edit")) {
                         item.classList.add("fa-times");
                         item.classList.remove("fa-user-edit");
                     }
@@ -29,7 +29,7 @@
             } else {
                 element.classList.remove("marked");
                 element.childNodes.forEach(item => {
-                    if (item.classList.contains("fa-times")) {
+                    if (item.classList != undefined && item.classList.contains("fa-times")) {
                         item.classList.add("fa-user-edit");
                         item.classList.remove("fa-times");
                     }
