--- a/Callcenter/Views/Alle/Index.cshtml
+++ b/Callcenter/Views/Alle/Index.cshtml
@@ -20,7 +20,7 @@
             <td>@item.timestamp</td>
             <td>@item.phone</td>
             <td>@item.zip</td>
-            <td>@item.requestText</td>
+            <td>@item.request</td>
         </tr>
             }
         </table>
