--- a/Callcenter/Views/Entry/Index.cshtml
+++ b/Callcenter/Views/Entry/Index.cshtml
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
                 <label for="requestText">Text:</label><br>
-                <textarea class="form-control" id="requestText" name="requestText" rows="3">@Model.requestText</textarea>
+                <textarea class="form-control" id="requestText" name="requestText" rows="3">@Model.request</textarea>
             </div>
             <input type="submit" value="Submit">
         </form>
