--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -77,7 +77,7 @@
             <tr id="@item.id" class="@item.CString">
                 <td>@item.timestamp</td>
                 <td>@item.phone</td>
-                <td>@item.requestText</td>
+                <td>@item.request</td>
                 <td onclick="MarkItem('@item.id')"><i class="fas fa-user-edit"></i></td>
                 <td onclick="DelItem('@item.id')"><i class="fas fa-thumbs-up"></i></td>
             </tr>
