--- a/Callcenter/Views/Alle/Index.cshtml
+++ b/Callcenter/Views/Alle/Index.cshtml
@@ -12,7 +12,7 @@
                 <th>Timestamp</th>
                 <th>phone</th>
                 <th>zip</th>
-                <th>Text</th>
+                <th>Anfrage</th>
             </tr>
             @foreach(var item in Model)
             {
@@ -20,7 +20,7 @@
             <td>@item.timestamp</td>
             <td>@item.phone</td>
             <td>@item.zip</td>
-            <td>@item.request</td>
+            <td>@item.request.ToString()</td>
         </tr>
             }
         </table>
