--- a/Callcenter/Views/Entry/Index.cshtml
+++ b/Callcenter/Views/Entry/Index.cshtml
@@ -17,8 +17,20 @@
                 <input class="form-control" type="text" id="zip" name="zip" value="@Model.zip"><br>
             </div>
             <div class="form-group">
-                <label for="requestText">Text:</label><br>
-                <textarea class="form-control" id="requestText" name="requestText" rows="3">@Model.request</textarea>
+                <label for="request">Anfrage:</label><br>
+                <select class="form-control" id="request" name="request">
+                    @foreach (EntryRequest er in (EntryRequest[])Enum.GetValues(typeof(EntryRequest)))
+                    {
+                        if (Model.request == er)
+                        {
+                            <option value="@((int)er)" selected>@er.ToString()</option>
+                        }
+                        else
+                        {
+                            <option value="@((int)er)">@er.ToString()</option>
+                        }
+                    }
+                </select><br>
             </div>
             <input type="submit" value="Submit">
         </form>
