Texte und Kleinigkeiten

--- a/Callcenter/Views/Alle/Index.cshtml
+++ b/Callcenter/Views/Alle/Index.cshtml
@@ -9,9 +9,9 @@
     <div id="tablespace">
         <table style="width:100%">
             <tr>
-                <th>Timestamp</th>
-                <th>phone</th>
-                <th>zip</th>
+                <th>Zeitpunkt</th>
+                <th>Telefonnummer</th>
+                <th>Postleitzahl</th>
                 <th>Anfrage</th>
             </tr>
             @foreach(var item in Model)
