--- a/Callcenter/Views/Entry/Index.cshtml
+++ b/Callcenter/Views/Entry/Index.cshtml
@@ -2,6 +2,7 @@
     @{
         ViewData["Title"] = "Callcenter";
     }
+<link rel="stylesheet" href="EntryIndex.scss" type="text/css" />
 
     <div class="text-center">
         <h1 class="display-4">@ViewData["Title"]</h1>
@@ -9,12 +10,12 @@
     <div id="addspace">
         <form method="post" action="/">
             <div class="form-group">
-                <label for="phone">Telefon:</label><br>
+                <label for="phone">Telefonnummer:</label><br>
                 <input class="form-control" type="text" id="phone" name="phone" value="@Model.phone"><br>
             </div>
             <div class="form-group">
-                <label for="zip">Zip:</label><br>
-                <input class="form-control" type="text" id="zip" name="zip" value="@Model.zip"><br>
+                <label for="zip">Postleitzahl:</label><br>
+                <input class="form-control test" type="number" id="zip" name="zip" value="@Model.zip"><br>
             </div>
             <div class="form-group">
                 <label for="request">Anfrage:</label><br>
