--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model System.Collections.Generic.List<Callcenter.Models.Entry>
 @{
-    ViewData["Title"] = "Callcenter";
+    ViewData["Title"] = "Übersicht";
 }
 <style>
     .marked {
