--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -61,7 +61,7 @@
     }
 </script>
 <div class="text-center">
-    <h1 class="display-4">@ViewData["Title"]</h1>
+    <h1 class="display-4">Callcenter gemeinsam.online</h1>
 </div>
 <div id="tablespace">
     <table style="width: 100% ">
