--- a/Callcenter/Views/Shared/_Layout.cshtml
+++ b/Callcenter/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Callcenter</title>
+    <title>@ViewData["Title"] - gemeinsam.online</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="~/lib/font-awesome/css/all.css"></script>
@@ -42,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Callcenter - 
+            &copy; 2020 - Callcenter - gemeinsam.online
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
