--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -16,10 +16,10 @@
         const element = document.getElementById(elmid);
         if (element.classList.contains("other")) {
             const isConfirmed = confirm("Dieser Eintrag wird bereits bearbeitet. Bitte bestätigen Sie, dass sie diesen Eintrag übernehmen möchten.");
-            if(!isConfirmed){
+            if (!isConfirmed) {
                 return;
             }
-            if(element.classList.contains("other")){
+            if (element.classList.contains("other")) {
                 element.classList.remove("other");
             }
         }
@@ -60,30 +60,51 @@
         }
     }
 </script>
-<div class="text-center">
-    <h1 class="display-4">Callcenter gemeinsam.online</h1>
+<div class="d-md-flex h-md-100 align-items-center">
+
+    <!-- First Half -->
+
+    <div class="col-md-6 p-0 bg-indigo h-md-100">
+        <div class="text-white d-md-flex align-items-center h-100 p-5 text-center justify-content-center">
+            <div class="logoarea pt-5 pb-5">
+                <div class="text-center">
+                    <h1 class="display-4">Callcenter gemeinsam.online</h1>
+                </div>
+                <div id="tablespace">
+                    <table style="width: 100% ">
+                        <tr>
+                            <th>Zeitpunkt</th>
+                            <th>Telefonnummer</th>
+                            <th>Text</th>
+                            <th>Bearbeiten</th>
+                            <th>Fertig</th>
+                        </tr>
+                        @foreach (var item in Model)
+                        {
+                            <tr id="@item.id" class="@item.CString">
+                                <td>@item.timestamp</td>
+                                <td>@item.phone</td>
+                                <td>@item.request</td>
+                                <td onclick="MarkItem('@item.id')"><i class="fas fa-user-edit" title="In Bearbeitung nehmen"></i></td>
+                                <td onclick="DelItem('@item.id')"><i class="fas fa-thumbs-up" title="Fertigstellen"></i></td>
+                            </tr>
+                        }
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Second Half -->
+
+    <div class="col-md-6 p-0 bg-white h-md-100 loginarea">
+        <div class="d-md-flex align-items-center h-md-100 p-5 justify-content-center">
+            Second half content here
+        </div>
+    </div>
+
 </div>
-<div id="tablespace">
-    <table style="width: 100% ">
-        <tr>
-            <th>Zeitpunkt</th>
-            <th>Telefonnummer</th>
-            <th>Text</th>
-            <th>Bearbeiten</th>
-            <th>Fertig</th>
-        </tr>
-        @foreach (var item in Model)
-        {
-            <tr id="@item.id" class="@item.CString">
-                <td>@item.timestamp</td>
-                <td>@item.phone</td>
-                <td>@item.request</td>
-                <td onclick="MarkItem('@item.id')"><i class="fas fa-user-edit" title="In Bearbeitung nehmen"></i></td>
-                <td onclick="DelItem('@item.id')"><i class="fas fa-thumbs-up" title="Fertigstellen"></i></td>
-            </tr>
-        }
-    </table>
-</div>
+
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script type="text/javascript">
     "use strict";
