--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -65,7 +65,7 @@
     <!-- First Half -->
 
     <div class="col-md-6 p-0 bg-indigo h-md-100">
-        <div class="text-white d-md-flex align-items-center h-100 p-5 text-center justify-content-center">
+        <div class="d-md-flex align-items-center h-100 p-5 text-center justify-content-center">
             <div class="logoarea pt-5 pb-5">
                 <div class="text-center">
                     <h1 class="display-4">Callcenter gemeinsam.online</h1>
