--- a/Callcenter/Views/Frame/Add.cshtml
+++ b/Callcenter/Views/Frame/Add.cshtml
@@ -7,7 +7,7 @@
     <h1 class="display-4">@ViewData["Title"]</h1>
 </div>
 <div id="addspace">
-    <form method="post" action="/Frame/Send">
+    <form method="post" action="/frame/send">
         <input id="id" name="id" type="hidden" value="@Model.id">
         <div class="form-group">
             <label for="phone">Telefonnummer:</label><br>
