--- a/Callcenter/Views/Shared/_Layout.cshtml
+++ b/Callcenter/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="~/lib/font-awesome/css/all.css"></script>
     <script src="~/lib/font-awesome/js/all.js"></script>
+    <script src="~/js/signalr/dist/browser/signalr.js"></script>
 </head>
 <body>
     <header>
