--- a/Callcenter/wwwroot/css/site.css
+++ b/Callcenter/wwwroot/css/site.css
@@ -69,3 +69,17 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+/* Home index */
+.marked {
+    background-color: rosybrown;
+}
+
+.other {
+    background-color: aqua;
+}
+
+.fixed {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+}
