--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
                         </div>
                     }
                 </div>
-                <input type="submit"class="btn btn-primary" value="Speichern">
+                <input type="submit"class="btn btn-primary block" value="Speichern">
             </form>
             </div>
             <div id="requestFinish" class="invisible alert alert-success" role="alert">
