--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                     <h1 class="display-4">Callcenter gemeinsam.online</h1>
                 </div>
                 <div id="tablespace">
-                    <table style="width: 100% ">
+                    <table style="width: 100% " id="entries">
                         <tr>
                             <th>Zeitpunkt</th>
                             <th>Telefonnummer</th>
@@ -24,7 +24,7 @@
                         @foreach (var item in Model)
                         {
                             <tr id="@item.id" class="@item.CString">
-                                <td>@item.timestamp.ToLocalTime()</td>
+                                <td>@item.timestamp.ToLocalTime().ToString("d.M.yyyy HH:mm:ss")</td>
                                 <td>@item.phone</td>
                                 <td>@item.request</td>
                                 <td><button class="btn btn-secondary block" onclick="MarkItem('@item.id')"><i class="fas fa-user-edit" title="In Bearbeitung nehmen"></i></button></td>
