--- a/Callcenter/Views/Shared/_Layout.cshtml
+++ b/Callcenter/Views/Shared/_Layout.cshtml
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - gemeinsam.online</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-    <script src="~/lib/font-awesome/css/all.css"></script>
+    <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/site.css" />
+    <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
     <script src="~/lib/font-awesome/js/all.js"></script>
     <script src="~/js/signalr/dist/browser/signalr.js"></script>
 </head>
