--- a/Callcenter/Views/Alle/Index.cshtml
+++ b/Callcenter/Views/Alle/Index.cshtml
@@ -27,3 +27,11 @@
             }
         </table>
     </div>
+    <div>
+        <br /><br />
+              <div class="alert alert-secondary" role="alert">
+                  <h5>Statistik:</h5>
+                  <p>Anzahl gesamt: <span>@ViewData["CountAll"]</span></p>
+                  <p>Anzahl ohne PLZ: <span>@ViewData["CountNoZip"]</span></p>
+              </div>
+    </div>
