--- a/Callcenter/Views/Alle/Index.cshtml
+++ b/Callcenter/Views/Alle/Index.cshtml
@@ -33,5 +33,9 @@
                   <h5>Statistik:</h5>
                   <p>Anzahl gesamt: <span>@ViewData["CountAll"]</span></p>
                   <p>Anzahl ohne PLZ: <span>@ViewData["CountNoZip"]</span></p>
+                  <p>Anrufe letzte Stunde: <span>@ViewData["CallHour"]</span></p>
+                  <p>Bearbeitet letzte Stunde: <span>@ViewData["EditHour"]</span></p>
+                  <p>Anrufe letzter Tag: <span>@ViewData["CallDay"]</span></p>
+                  <p>Bearbeitet letzter Tag: <span>@ViewData["EditDay"]</span></p>
               </div>
     </div>
