--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -46,11 +46,11 @@
                 <input id="id" name="id" type="hidden">
                 <div class="form-group">
                     <label for="phone">Telefonnummer:</label><br>
-                    <input class="form-control" type="text" id="phone" name="phone"><br>
+                    <input class="form-control input-lg" type="text" id="phone" name="phone"><br>
                 </div>
                 <div class="form-group">
                     <label for="zip">Postleitzahl:</label><br>
-                    <input class="form-control test" type="number" id="zip" name="zip"><br>
+                    <input class="form-control input-lg test" type="number" id="zip" name="zip"><br>
                 </div>
                 <div class="form-group">
                     <label for="request">Anfrage:</label><br>
