--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -42,30 +42,30 @@
     <div class="col-md-3 p-0 bg-white h-md-100 loginarea">
         <div class="d-md-flex align-items-center h-md-100 p-5 justify-content-center fixed">
             <div id="requestForm">
-            <form action="#" onsubmit="return AddItem();">
-                <input id="id" name="id" type="hidden">
-                <div class="form-group">
-                    <label for="phone">Telefonnummer:</label><br>
-                    <input class="form-control input-lg" type="text" id="phone" name="phone"><br>
-                </div>
-                <div class="form-group">
-                    <label for="zip">Postleitzahl:</label><br>
-                    <input class="form-control input-lg test" type="number" id="zip" name="zip"><br>
-                </div>
-                <div class="form-group">
-                    <label for="request">Anfrage:</label><br>
-                    @foreach (EntryRequest er in (EntryRequest[])Enum.GetValues(typeof(EntryRequest)))
-                    {
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="request" id="@((int)er)" value="@((int)er)" checked>
-                            <label class="form-check-label" for="@((int)er)">
-                                @er.ToString()
-                            </label>
-                        </div>
-                    }
-                </div>
-                <input type="submit"class="btn btn-primary block" value="Speichern">
-            </form>
+                <form action="#" onsubmit="return AddItem();">
+                    <input id="id" name="id" type="hidden">
+                    <div class="form-group">
+                        <label for="phone">Telefonnummer:</label><br>
+                        <input class="form-control input-lg" type="text" id="phone" name="phone"><br>
+                    </div>
+                    <div class="form-group">
+                        <label for="zip">Postleitzahl:</label><br>
+                        <input class="form-control input-lg test" type="number" id="zip" name="zip"><br>
+                    </div>
+                    <div class="form-group">
+                        <label for="request">Anfrage:</label><br>
+                        @foreach (EntryRequest er in (EntryRequest[])Enum.GetValues(typeof(EntryRequest)))
+                        {
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="request" id="@((int)er)" value="@((int)er)" checked>
+                                <label class="form-check-label" for="@((int)er)">
+                                    @er.ToString()
+                                </label>
+                            </div>
+                        }
+                    </div>
+                    <input type="submit" class="btn btn-primary block" value="Speichern">
+                </form>
             </div>
             <div id="requestFinish" class="invisible alert alert-success" role="alert">
                 <h5>Eintrag Erfolgreich gespeichert.</h5>
@@ -73,6 +73,10 @@
                 <p>Postleitzahl: <span id="rfzip"></span>.</p>
                 <p>Anfrage: <span id="rfreq"></span>.</p>
                 <h5>Vielen Dank für deine Mühe.</h5>
+            </div>
+            <div id="ErrorWindow" class="invisible alert alert-danger" role="alert">
+                <h5>Fehler!!!!</h5>
+                <p id="ErrorText"></p>
             </div>
         </div>
     </div>
