Keinen Fehler zur auswahl

--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -56,12 +56,15 @@
                         <label for="request">Anfrage:</label><br>
                         @foreach (EntryRequest er in (EntryRequest[])Enum.GetValues(typeof(EntryRequest)))
                         {
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="request" id="@((int)er)" value="@((int)er)" checked>
-                                <label class="form-check-label" for="@((int)er)">
-                                    @er.ToString()
-                                </label>
-                            </div>
+                            @if ((int)er >= 0)
+                            {
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="request" id="@((int)er)" value="@((int)er)" checked>
+                                    <label class="form-check-label" for="@((int)er)">
+                                        @er.ToString()
+                                    </label>
+                                </div>
+                            }
                         }
                     </div>
                     <input type="submit" class="btn btn-primary block" value="Speichern">
