--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
                     </div>
                     <div class="form-group">
                         <label for="zip">Postleitzahl:</label><br>
-                        <input class="form-control input-lg test" type="number" id="zip" name="zip" required><br>
+                        <input class="form-control input-lg test" type="text" id="zip" name="zip" required><br>
                     </div>
                     <div class="form-group">
                         <label for="request">Anfrage:</label><br>
@@ -71,14 +71,14 @@
                 </form>
             </div>
             <div id="requestFinish" class="invisible alert alert-success" role="alert">
-                <h5>Eintrag Erfolgreich gespeichert.</h5>
+                <h5>Der Eintrag wurde erfolgreich gespeichert!</h5>
                 <p>Telefonnummer: <span id="rftel"></span>.</p>
                 <p>Postleitzahl: <span id="rfzip"></span>.</p>
                 <p>Anfrage: <span id="rfreq"></span>.</p>
                 <h5>Vielen Dank für deine Mühe.</h5>
             </div>
             <div id="ErrorWindow" class="invisible alert alert-danger" role="alert">
-                <h5>Fehler!!!!</h5>
+                <h5>Ein Fehler ist aufgetreten.</h5>
                 <p id="ErrorText"></p>
             </div>
         </div>
