--- a/Callcenter/Views/Frame/Add.cshtml
+++ b/Callcenter/Views/Frame/Add.cshtml
@@ -3,43 +3,91 @@
     ViewData["Title"] = "Neuer Eintrag";
     Layout = "~/Views/Shared/_BlankLayout.cshtml";
 }
+<script type="text/javascript">
+    function ShowErrorMsgFrame(msg) {
+        console.error("Fehler: " + msg);
+        const ErrorWindow = document.getElementById('ErrorWindow');
+        if (ErrorWindow && ErrorWindow != undefined && ErrorWindow != null) {
+            document.getElementById('ErrorText').innerHTML = msg;
+            ErrorWindow.classList.remove("invisible");
+            setTimeout(function () {
+                ErrorWindow.classList.add("invisible");
+            }, 2000);
+        }
+    }
+    function validateFrame() {
+        if (!validatePhone()) {
+            ShowErrorMsgFrame("Telefonnummer ist nicht Korregt");
+            return false;
+        }
+        if (!validateZip()) {
+            ShowErrorMsgFrame("Postleitzahl ist nicht Korregt");
+            return false;
+        }
+        if (!validateAuswahl()) {
+            ShowErrorMsgFrame("Auswahl ist nicht Korregt");
+            return false;
+        }
+        return true;
+    }
+    function valiPhone() {
+        if (validatePhone()) {
+            ErrorWindow.classList.add("invisible");
+        }
+    }
+    function valiZip() {
+        if (validateZip()) {
+            ErrorWindow.classList.add("invisible");
+        }
+    }
+</script>
 <div class="text-center">
     <h1 class="display-4">@ViewData["Title"]</h1>
 </div>
 <div id="addspace">
-    <form method="post" action="/frame/send">
+    <form method="post" action="/frame/send" onsubmit="return validateFrame();">
         <input id="id" name="id" type="hidden" value="@Model.id">
         <div class="form-group">
             <label for="phone">Telefonnummer:</label><br>
-            <input class="form-control" type="text" id="phone" name="phone" value="@Model.phone"><br>
+            <input class="form-control input-lg" type="text" id="phone" name="phone" onchange="valiPhone();" value="@Model.phone" required><br>
         </div>
         <div class="form-group">
             <label for="zip">Postleitzahl:</label><br>
-            <input class="form-control test" type="number" id="zip" name="zip" value="@Model.zip"><br>
+            <input class="form-control input-lg test" type="text" id="zip" name="zip" onchange="valiZip();" value="@Model.zip" required><br>
         </div>
         <div class="form-group">
             @foreach (EntryRequest er in (EntryRequest[])Enum.GetValues(typeof(EntryRequest)))
             {
-                if (Model.request == er)
+                @if ((int)er >= 0)
                 {
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="request" id="@((int)er)" value="@((int)er)" checked>
-                        <label class="form-check-label" for="@((int)er)">
-                            @er.ToString()
-                        </label>
-                    </div>
-                }
-                else
-                {
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="request" id="@((int)er)" value="@((int)er)" checked>
-                        <label class="form-check-label" for="@((int)er)">
-                            @er.ToString()
-                        </label>
-                    </div>
+                    if (Model.request == er)
+                    {
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="request" id="@((int)er)" value="@((int)er)" checked>
+                            <label class="form-check-label" for="@((int)er)">
+                                @er.ToString()
+                            </label>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="request" id="@((int)er)" value="@((int)er)" checked>
+                            <label class="form-check-label" for="@((int)er)">
+                                @er.ToString()
+                            </label>
+                        </div>
+                    }
                 }
             }
         </div>
         <input type="submit" value="Submit">
     </form>
+    <br />
+    <div id="ErrorWindow" class="popup invisible alert-danger" role="alert">
+        <p>
+            <b>Ein Fehler ist aufgetreten.</b>
+        </p>
+        <p id="ErrorText"></p>
+    </div>
 </div>
