--- a/Callcenter/Views/Frame/Add.cshtml
+++ b/Callcenter/Views/Frame/Add.cshtml
@@ -17,15 +17,15 @@
     }
     function validateFrame() {
         if (!validatePhone()) {
-            ShowErrorMsgFrame("Telefonnummer ist nicht Korregt");
+            ShowErrorMsgFrame("Telefonnummer ist nicht korrekt");
             return false;
         }
         if (!validateZip()) {
-            ShowErrorMsgFrame("Postleitzahl ist nicht Korregt");
+            ShowErrorMsgFrame("Postleitzahl ist nicht korrekt");
             return false;
         }
         if (!validateAuswahl()) {
-            ShowErrorMsgFrame("Auswahl ist nicht Korregt");
+            ShowErrorMsgFrame("Auswahl ist nicht korrekt");
             return false;
         }
         return true;
